# cmakeSamples

./: .gitignore  README.md
cmake-for-all/: CMakeSettings.json  README.md
cmake-for-all/app/: CMakeLists.txt  main.cc
cmake-for-all/include/: shape.h
cmake-for-all/lib/: CMakeLists.txt  shape.cc
cmake-for-all/tests/: CMakeLists.txt  shape_test.cc
cmakeSample01/: CMakeLists.txt  main.cpp
cmakeSample02/: CMakeLists.txt  Rect.cpp  Rect.h
cmakeSample03/: CMakeLists.txt  Person.cpp  Person.h
cmakeSample04/: Animal.cpp  Animal.h  CMakeLists.txt
cmakeSample05/: CMakeLists.txt  main.cpp  shape.cpp  shape.h  util.cpp  util.h
